--- a/assets/www/about.html
+++ b/assets/www/about.html
@@ -29,13 +29,11 @@
 
 				<ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 					<li>
-						<a href="intro.html">Credits</a>
+						<a href="credits.html">Credits</a>
 					</li>
 				</ul>
 
 			</div><!-- /content -->
-
-			<div data-role="footer"  data-position="fixed"  data-theme="c"></div><!-- /footer -->
 
 		</div>
 	</body>
