--- a/assets/www/car.html
+++ b/assets/www/car.html
@@ -1,157 +1,142 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-	<head>
-		<meta charset="UTF-8">
-		<title>car</title>
-	</head>
-	<body>
-		<div data-role="page" id="car" data-title="car">
+    <head>
+        <meta charset="UTF-8">
+        <title>car</title>
+    </head>
+    <body>
+        <div data-role="page" id="car" data-title="car">
 
-			<div data-role="header" data-position="fixed" data-theme="b">
-				<a href="index.html">首页</a><h1>校车</h1>
-			</div><!-- /header -->
+            <div data-role="header" data-position="fixed" data-theme="b">
+                <a href="index.html">首页</a><h1>校车</h1>
+            </div><!-- /header -->
 
-			<div data-role="content" data-theme="c">
+            <div data-role="content"  data-theme="c">
 
-				<div data-role="collapsible-set">
-					<h3>通勤班车</h3>
-					<p>
-						注：每周一各路通勤早班车提前10分钟发车。
-					</p>
-					<div data-role="collapsible">
-						<h3>6:50 东线班车</h3>
-						<p>
-							早班发车6:50	晚班返回17:10
-						<p>
-							金台路校区	北二环钟楼北桥	德外关厢	小营校区
-					</div>
+                <div data-role="collapsible-set">
+                    <h3>通勤班车</h3>
+                    <p>
+                        国家法定节假日、寒暑假、双休日后，教职工第一天上班，各路通勤早班车提前10分钟发车。
+                    </p>
+                    <p>
+                        教学班车运行时间为每学期第1周至第18周或19周；第18周或19周至第20周或21周开行考试班车，届时由学校办公室另行通知。
+                    </p>
+                    <div data-role="collapsible">
+                        <h3>6:50 东线班车</h3>
+                        <p>
+                            早班发车6:50 晚班返回17:10
+                        <p>
+                            金台路校区    北二环钟楼北桥 德外关厢    小营校区
+                    </div>
 
-					<div data-role="collapsible">
-						<h3>6:55 西线班车</h3>
-						<p>
-							早班发车6:55	晚班返回17:10
-						<p>
-							公主坟	当代商城	蓝旗营清华西南门	小营校区
-					</div>
+                    <div data-role="collapsible">
+                        <h3>6:55 西线班车</h3>
+                        <p>
+                            早班发车6:55 晚班返回17:10
+                        <p>
+                            公主坟  当代商城    蓝旗营清华西南门    小营校区
+                    </div>
 
-					<div data-role="collapsible">
-						<h3>7:05 望京-小营</h3>
-						<p>
-							早班发车7:05	晚班返回17:10
-						<p>
-							北四环联大	望兴园	望京花园	小营校区
-					</div>
+                    <div data-role="collapsible">
+                        <h3>7:05 望京-小营</h3>
+                        <p>
+                            早班发车7:05 晚班返回17:10
+                        <p>
+                            北四环联大    望兴园 望京花园    小营校区
+                    </div>
 
-					<div data-role="collapsible">
-						<h3>6:45 回龙观-育新-小营</h3>
-						<p>
-							早班发车6:45	17:10
-						<p>
-							流星花园	北店嘉园	矩阵小区	龙跃苑等	育新小区	小营校区
-					</div>
+                    <div data-role="collapsible">
+                        <h3>6:55 回龙观-育新-小营</h3>
+                        <p>
+                            早班发车6:55 17:10
+                        <p>
+                            流星花园 北店嘉园    矩阵小区    龙跃苑等    育新小区    小营校区
+                    </div>
 
-					<div data-role="collapsible">
-						<h3>7:30 健翔桥-小营</h3>
-						<p>
-							早班发车7:30	晚班返回17:10
-						<p>
-							健翔桥校区	小营校区
-					</div>
+                    <div data-role="collapsible">
+                        <h3>7:30 健翔桥-小营</h3>
+                        <p>
+                            早班发车7:30 晚班返回17:10
+                        <p>
+                            健翔桥校区    小营校区
+                    </div>
 
-					<div data-role="collapsible">
-						<h3>7:15 小营-健翔桥</h3>
-						<p>
-							早班发车7:15	17:35
-						<p>
-							小营校区	健翔桥校区	晚班车：小营至健翔桥班车17:35左右到健翔桥后返回小营
-					</div>
+                    <div data-role="collapsible">
+                        <h3>7:15 小营-健翔桥</h3>
+                        <p>
+                            早班发车7:15
+                        <p>
+                            小营校区 健翔桥校区   晚班车：小营至健翔桥班车17:35左右到健翔桥后返回小营
+                    </div>
 
-					<div data-role="collapsible">
-						<h3>6:45 回龙观-育新--健翔桥</h3>
-						<p>
-							早班发车6:45	晚班返回17:10
-						<p>
-							早班车设一站：港龙商业中心东侧龙腾苑三区东门公交站	育新小区（约7:00）
-							（建材城西路北侧）	健翔桥校区	晚班车到育新小区后延长至回龙观地区各站点
-					</div>
+                    <div data-role="collapsible">
+                        <h3>6:55 回龙观-育新--健翔桥</h3>
+                        <p>
+                            早班发车6:55 晚班返回17:10
+                        <p>
+                            早班车设一站：港龙商业中心东侧龙腾苑三区东门公交站    育新小区（约7:00）
+                            （建材城西路北侧）   健翔桥校区   晚班车到育新小区后延长至回龙观地区各站点
+                    </div>
 
-					<div data-role="collapsible">
-						<h3>7:15 望京--健翔桥</h3>
-						<p>
-							早班发车7:15	晚班返回17:10
-						<p>
-							望京花园	望兴园	健翔桥校区
-					</div>
-				</div>
+                    <div data-role="collapsible">
+                        <h3>7:15 望京--健翔桥</h3>
+                        <p>
+                            早班发车7:15 晚班返回17:10
+                        <p>
+                            望京花园 望兴园 健翔桥校区
+                    </div>
+                </div>
+               <div data-role="collapsible-set">     
+                <h3>教学班车</h3>
+                <div data-role="collapsible">
+                    <h3>9:50 小营-清河校区南门-健翔桥</h3>
+                    <p>
+                        9:50
+                    <p>
+                        小营校区 清河校区南门  健翔桥校区
+                </div>
 
-				<h3>教学班车</h3>
-				<div data-role="collapsible">
-					<h3>10:05 小营-清河校区西门-健翔桥</h3>
-					<p>
-						10:05
-					<p>
-						小营校区	清河校区西门外G6高速辅路	健翔桥校区
-				</div>
+                <div data-role="collapsible">
+                    <h3>9:50 健翔桥-小营</h3>
+                    <p>
+                        9:50
+                    <p>
+                        健翔桥校区    小营校区
+                </div>
 
-				<div data-role="collapsible">
-					<h3>10:35 健翔桥-小营</h3>
-					<p>
-						10:35
-					<p>
-						健翔桥校区	小营校区
-				</div>
+                <div data-role="collapsible">
+                    <h3>12:30 小营-清河校区南门-健翔桥</h3>
+                    <p>
+                        12:30
+                    <p>
+                        小营校区 清河校区南门  健翔桥校区
+                </div>
 
-				<div data-role="collapsible">
-					<h3>12:15 小营-清河校区西门-健翔桥</h3>
-					<p>
-						12:15
-					<p>
-						小营校区	清河校区西门外G6高速辅路	健翔桥校区
-				</div>
+                <div data-role="collapsible">
+                    <h3>12:30 健翔桥-小营-清河校区南门</h3>
+                    <p>
+                        12:30
+                    <p>
+                        健翔桥校区    小营校区    清河校区南门
+                </div>
 
-				<div data-role="collapsible">
-					<h3>12:15 小营-清河校区西门-金台西路</h3>
-					<p>
-						12:15
-					<p>
-						小营校区	清河校区西门外G6高速辅路	金台路校区
-				</div>
+                <div data-role="collapsible">
+                    <h3>15:20 小营-清河校区南门-健翔桥</h3>
+                    <p>
+                        15:20
+                    <p>
+                        小营校区 清河校区南门  健翔桥校区
+                </div>
 
-				<div data-role="collapsible">
-					<h3>12:45 健翔桥-小营-清河校区西门</h3>
-					<p>
-						12:45
-					<p>
-						健翔桥校区	小营校区	清河校区西门
-				</div>
-
-				<div data-role="collapsible">
-					<h3>13:00 小营-健翔桥（周三）对开</h3>
-					<p>
-						13:00
-					<p>
-						小营校区	健翔桥校区
-				</div>
-
-				<div data-role="collapsible">
-					<h3>15:30 小营-清河校区西门-健翔桥</h3>
-					<p>
-						15:30
-					<p>
-						小营校区	清河校区西门外G6高速辅路	健翔桥校区
-				</div>
-
-				<div data-role="collapsible">
-					<h3>16:00 健翔桥-小营</h3>
-					<p>
-						16:00
-					<p>
-						健翔桥校区	小营校区
-				</div>
-
-			</div>
-
-		</div><!-- /content -->
-
-	</body>
+                <div data-role="collapsible">
+                    <h3>15:20 健翔桥-小营</h3>
+                    <p>
+                        15:20
+                    <p>
+                        健翔桥校区    小营校区
+                </div>
+             </div>
+            </div>
+        </div>
+    </body>
 </html>
