--- a/assets/www/history.html
+++ b/assets/www/history.html
@@ -9,20 +9,31 @@
 
             <div data-role="header" data-position="fixed" data-theme="b">
                 <a href="about.html">关于</a><h1>历史沿革</h1>
-            </div>
-            <!-- /header -->
-            <div>
-                <img src="images/news1.jpg" width="320px">
+                <a href="index.html">主页</a>
             </div>
             <div data-role="content" id="displayIntroduce"  data-theme="c">
 
-                <div id="introContent">
-                    <p>   北京机械工业学院的前身是1986年陕西机械学院北京研究生部和北京机械工业管理专科学校合并成立的北京机械工业管理学院，隶属机械工业部，1990年更名为北京机械工业学院，其办学历史可追溯到20世纪30年代，1998年划转北京市管理。 </p><p> 　　北京信息工程学院的前身是1978年第四机械工业部1915所举办的北京大学第二分校，1985年更名为北京信息工程学院，隶属电子工业部，1997年与电子工业管理干部学院、北京成人电子工业学院合并，2000年划转北京市管理。</p> <p> 　　新世纪初，北京市委市政府立足于北京高等教育更好地适应首都经济社会发展需要、为首都机电行业和信息行业培养高素质应用型人才，决定组建北京信息科技大学，于2003年8月21日启动组建工作；教育部于2004年5月18日批准筹建，于2008年3月26日批准正式设立。伴随着新大学成立,学校也加入北京学院路一本大家庭之中,学校发展也随之进入一个新的台阶。</p>
+                <div id="historyContent">
                 </div>
 
             </div>
-            <!-- /content -->
-          
+            <div data-role="footer"  data-position="fixed"  data-theme="c">
+                <div data-role="navbar">
+                    <ul>
+                        <li>
+                            <a id="introToInfo" href="intro.html">学校简介</a>
+                        </li>
+                        <li>
+                            <a id="introToHistory" href="history.html" class="ui-btn-active">历史沿革</a>
+                        </li>
+                        <li>
+                            <a id="introToCollege" href="about_colleges.html">院系专业</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <script src="js/about/about_history.js" type="text/javascript"></script>
         </div>
+        
 </body>
 </html>
